// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar component Should Exist 1`] = `[Function]`;

exports[`Navbar component Should be fixed on top 1`] = `
<nav
  className="navbar is-fixed-top"
  role="navigation"
/>
`;

exports[`Navbar component Should concat Bulma class with classes in props 1`] = `
<nav
  className="navbar other-class test"
  role="navigation"
/>
`;

exports[`Navbar component Should have Navbar classname 1`] = `
<nav
  className="navbar"
  role="navigation"
>
  <div
    className="navbar-brand"
  >
    <a
      className="navbar-item"
      href="#"
    >
      <img
        alt=""
        src="/"
      />
    </a>
    <div
      className="navbar-burger trigger-menu"
      role="button"
      style={
        Object {
          "outline": "none",
        }
      }
      tabIndex="0"
    >
      <span />
      <span />
      <span />
    </div>
  </div>
  <div>
    TEST
  </div>
  <div
    className="navbar-menu"
  >
    <div
      className="navbar-start"
    >
      <div
        className="navbar-item has-dropdown is-hoverable"
      >
        <span
          className="navbar-link"
        >
          Docs
        </span>
        <div
          className="navbar-dropdown is-boxed"
        >
          <a
            className="navbar-item"
            href="#"
          >
            Home
          </a>
          <hr
            className="navbar-divider"
          />
          <a
            className="navbar-item"
            href="#"
          >
            Home
          </a>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Navbar component Should have custom inline styles 1`] = `
<nav
  className="navbar"
  role="navigation"
  style={
    Object {
      "width": 200,
      "zIndex": 1,
    }
  }
/>
`;

exports[`Navbar component Should render as an html section 1`] = `
<section
  className="navbar"
  role="navigation"
/>
`;
